--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
             // ═══════════════════════════════════════════════════════════════════
             // 📝 FOOTER - PHẦN CUỐI TRANG
             // ═══════════════════════════════════════════════════════════════════
-            footerText: "Nếu bạn thấy vui, hãy share cho bạn bè cùng cười! 😂",
+            footerText: "Nếu bạn thấy vui, hãy share cho bạn bè cùng Donate cho Đạt! 😂",
             disclaimer: `
                 ⚠️ Đây là trang web để nuôi Đạt 
                 Mọi donate đều được sử dụng để mua phở (thật sự) 🍜 ☕
